--- a/assets/estilos/index.css
+++ b/assets/estilos/index.css
@@ -901,7 +901,7 @@ footer p{
 }
 
 .humburguer{
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     flex-direction: column;
