--- a/assets/estilos/index.css
+++ b/assets/estilos/index.css
@@ -361,14 +361,14 @@ nav, section, .textoApresentacao{
     justify-content: center;
     width: 100%;
     border: 0px solid orange;
-    height: 140px;
+    min-height: 140px;
 }
 
 .skillContainer{
     position: absolute;
     top: -100px;
     left: auto;
-    height: 340px;
+    min-height: 340px;
     width: 900px;
     background-color: #fff;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
