--- a/assets/estilos/responsividade.css
+++ b/assets/estilos/responsividade.css
@@ -1,7 +1,7 @@
 @media(max-height: 900px), (max-width: 500px){
     .slide{
         width: 100%;
-        height: 450px;
+        height: 650px;
     }
 
     .linhaTitulo{
@@ -135,20 +135,28 @@
 
     .skils{
         min-height: 20px;
-        display: none;
+        position: static;
+        
     }
     .skillContainer{
         flex-direction: column;
         position: static;
         min-height: 340px;
-        width: 60%;
-        top: 0;
+        width: 90%;
+        margin-top: 50px;
+
     }
     .skill{
+        
         width: 100%;
         border: 0px;
         margin-top: 20px;
     }
+
+    .projetos{
+        margin-top: 50px;
+    }
+
 }
 
 @media (max-width: 796px){
@@ -177,10 +185,18 @@
     }
 }
 
+
 @media (max-width: 584px){
     .arteSobre, .bolinhaC{
         display: none;
     }
+
+    .skillContainer{
+
+        width: 95%;
+
+    }
+
 
     .fotoAly{
         width: 95%;
