--- a/assets/estilos/index.css
+++ b/assets/estilos/index.css
@@ -293,7 +293,7 @@ main{
 .slide{
     width: 100%;
     height: 85vh;
-    background-color: #eee;
+    background-color: var(--header);
     border-bottom: 1px solid black;
     background-image: url(../img/banner/bannerOlaya.png);
     background-position: center;
@@ -304,7 +304,9 @@ main{
     align-items: center;
     justify-content: center;
 }
-
+.tirar{
+    display: none;
+}
 .gradiente{
     position: absolute;
     top: 0;
@@ -842,7 +844,7 @@ footer p{
 }
 
 .otherCena{
-    height: 700px;
+    min-height: 700px;
 }
 
 .divEcreva{
@@ -862,7 +864,7 @@ footer p{
 
 .divEcre{
     width: calc((100% / 2) - 0px);
-    height: 400px;
+    min-height: 400px;
     border-right: 1px solid #aaa;
     padding: 80px;
     
@@ -874,7 +876,7 @@ footer p{
 
 .divEcrevaC{
     width: 80%;
-    height: 500px;
+    min-height: 500px;
     background-color: #fff;
     display: flex;
     align-items: center;
