--- a/assets/estilos/responsividade.css
+++ b/assets/estilos/responsividade.css
@@ -98,7 +98,7 @@
         display: flex;
     }
 
-    .menuNav{
+    .menuNav, .menuNav2{
         position: fixed;
         height: calc(100% - 0px);
         width: 0px;
@@ -110,7 +110,32 @@
         transition: all .3s ease-in-out;
     }
 
-    .menuNav ul{
+    .menuNav2{
+        position: fixed;
+        height: calc(100% - 0px);
+        width: 100%!important;
+        top: 0px;
+        left: 0px;
+        z-index: 9999;
+        background-color: rgba(0, 0, 0, 0.5);
+        overflow: hidden;
+        transition: all .3s ease-in-out;
+    }
+    .menuNav2{
+        position: fixed;
+        height: calc(100% - 0px);
+        width: 0px;
+        top: 0px;
+        left: 0px;
+        z-index: 9999;
+        background-color: rgba(0, 0, 0, 0.5);
+        overflow: hidden;
+        transition: all .3s ease-in-out;
+    }
+
+    /* .menuNav2 */
+
+    .menuNav ul, .menuNav2 ul{
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-start;
@@ -123,12 +148,12 @@
         
     }
 
-    .menuNav ul li{
+    .menuNav ul li, .menuNav2 ul li{
         width: 100%;
         justify-content: flex-start;
     }
 
-    .menuNav ul li a{
+    .menuNav ul li a, .menuNav2 ul li a{
         width: 100%;
         justify-content: flex-start;
         padding: 10px 0px;
